--- a/Stockflare/html/homepage.html
+++ b/Stockflare/html/homepage.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
+        <title>Stockflare Technical Test</title>
+
         <link rel="shortcut icon" type="image/x-icon" href="../img/stockflare_logo_homepage.png" />
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
